2018-02-09  Joshua Watt  <JPEWhacker@gmail.com>

	* aarch64_retval.c (aarch64_return_value_location): Use FALLTHROUGH
	macro instead of comment.
	* alpha_retval.c (alpha_return_value_location): Likewise.
	* arm_regs.c (arm_register_info): Likewise.
	* arm_retval.c (arm_return_value_location): Likewise.
	* i386_regs.c (i386_register_info): Likewise.
	* i386_retval.c (i386_return_value_location): Likewise.
	* ia64_retval.c (ia64_return_value_location): Likewise.
	* linux-core-note.c (core_note): Likewise.
	* m68k_retval.c (m68k_return_value_location): Likewise.
	* ppc64_retval.c (ppc64_return_value_location): Likewise.
	* ppc_regs.c (ppc_register_info): Likewise.
	* ppc_retval.c (ppc_return_value_location): Likewise.
	* s390_retval.c (s390_return_value_location): Likewise.
	* sh_retval.c (sh_return_value_location): Likewise.
	* sparc_retval.c (sparc_return_value_location): Likewise.
	* tilegx_retval.c (tilegx_return_value_location): Likewise.
	* x86_64_regs.c (x86_64_register_info): Likewise.
	* x86_64_retval.c (x86_64_return_value_location): Likewise.

2017-10-24  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (m68k_corenote_no_Wpacked_not_aligned): New variable.

2017-08-18  Ulf Hermann <ulf.hermann@qt.io>

	* linux-core-note.c: Use attribute_packed.

2017-04-27  Ulf Hermann <ulf.hermann@qt.io>

	* Makefile.am: Use dso_LDFLAGS.

2017-07-27  Mark Wielaard  <mark@klomp.org>

	* sparc_reloc.def: GOTDATA_OP_HIX22, GOTDATA_OP_LOX10 and
	GOTDATA_OP can be used in ET_REL files.

2017-07-19  Gustavo Romero <gromero@linux.vnet.ibm.com>

	* ppc_corenote.c: Add offsets for ppc64 HTM SPRs: thfar, tfiar,
	and texasr.
	* ppc_regs.c: Add names for ppc64 HTM SPRs mappings.

2017-07-20  Mark Wielaard  <mark@klomp.org>

	* aarch64_init.c (aarch64_init): Hook data_marker_symbol.
	* aarch64_symbol.c (aarch64_data_marker_symbol): New function.
	* arm_init.c (arm_init): Hook data_marker_symbol.
	* arm_symbol.c (aarch64_data_marker_symbol): New function.
